# dtu_mlops_cookiecutter_example

./: .coverage  .gitignore  Makefile  README.md  data.dvc  docker-compose.yaml  docker-run-predict.sh  pyproject.toml  requirements.txt  test_requirements.txt
.dvc/: config
.github/workflows/: codecheck.yml  docker.yml  docker_build_image.yml  docker_run_container.yml  tests.yml  tests_simple.yml
data/: np_image_test.npy
dockerfiles/: README.md  predict.dockerfile  trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
dtu_mlops_cookiecutter_example/: __init__.py  predict_model.py  train_model.py
dtu_mlops_cookiecutter_example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dtu_mlops_cookiecutter_example/data/: make_dataset.py
dtu_mlops_cookiecutter_example/models/: model.pt  model.py  model_1.pt
dtu_mlops_cookiecutter_example/visualizations/: visualize.py
models/: model.pt
tests/: __init__.py  test_data.py  test_model.py  test_train.py
